# Module subdirectories

# Port subdirectories
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Buffer/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Com/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Cmd/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Log/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Time/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Tlm/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Prm/")

# Framework subdirectories
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Cfg/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ComFile/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Comp/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Obj/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Port/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Types/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FilePacket/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SerializableFile/")
