# Module subdirectories

# Ports
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Cycle/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Fatal/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Ping/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PolyIf/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Sched/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Seq/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/WatchDog/")

# Components
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ActiveLogger/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ActiveRateGroup/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/AssertFatalAdapter/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/BufferManager/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/BuffGndSockIf/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ComLogger/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CmdDispatcher/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CmdSequencer/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FatalHandler/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FileDownlink/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FileUplink/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/GndIf/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Health/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Hub/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/LinuxTime/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PassiveConsoleTextLogger/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PassiveTextLogger/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PolyDb/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PrmDb/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/RateGroupDriver/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SocketGndIf/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Time/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TlmChan/")
