# Many unit tests were broken before the switch to cmake
# There are also missing dependencies between test cases.

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/active_tester")
# Broken topology
# add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/app1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/app2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/cnt_only")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command_multi_inst")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command_res")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command_string")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command_tester")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/command2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/comp_diff_namespace")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/comp_no_namespace")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/enum_return_port")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/enum1port")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event_enum")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event_multi_inst")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event_string")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event_throttle")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ext_dict")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/interface1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/log_tester")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/log1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/main")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/noargport")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param_enum")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param_multi_inst")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param_string")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param_tester")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/param2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/pass_by_attrib")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/port_loopback")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/port_nogen")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/port_return_type")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/queued1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serial_passive")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize_enum")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize_stringbuffer")

# Template uses a malformed XML file
# add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize_template")

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize_user")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/serialize3")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/stress")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/string_port")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/telem_tester")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/time_tester")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm_enum")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm_multi_inst")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm_onchange")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm_string")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tlm2")
